--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,23 +63,12 @@ delay_startup = true # determines if installing waits fo the window to load befo
 # If the requirements are platform specific, use the platform specific sections below
 # If the requirement is added here and in the platform specific section, the platform specific section takes precedence
 typing-extensions = ">=4.12.2"
-verr = ">=1.1.2"
 
-[tool.oxt.requirements_linux]
-# https://tinyurl.com/ymeh4c9j#tooloxtrequirements_linux
-# any linux specific requirements
-# These requirements take precedence over the general requirements
-# requests = ">=2.32.3"
-
-[tool.oxt.requirements_macos]
-# https://tinyurl.com/ymeh4c9j#tooloxtrequirements_macos
-# any macos specific requirements
-# These requirements take precedence over the general requirements
-
-[tool.oxt.requirements_win]
-# https://tinyurl.com/ymeh4c9j#tooloxtrequirements_win
-# any windows specific requirements
-# These requirements take precedence over the general requirements
+[[tool.oxt.py_packages]]
+name="verr"
+version="1.1.2"
+platforms=["all"]
+# ignore_platforms=["flatpak", "snap"]
 
 [tool.oxt.isolate]
 # https://tinyurl.com/ymeh4c9j#tooloxtisolate
@@ -129,7 +118,7 @@ es = "Plantilla para crear extensiones basadas en pip para LibreOffice"
 
 [tool.poetry]
 name = "libreoffice pip template"
-version = "0.5.0"
+version = "0.6.0"
 description = "Template for creating pip based extensions for for LibreOffice"
 authors = [":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"]
 license = "MIT"
